# smart-traffic-violation-system

./: .gitignore  API-完整接口文档.md  README.md  TEST_REPORT.md  test_all.py  后端中期答辩-后台开发汇报.pptx  团队任务分工.md
backend/: .env.example  pyproject.toml  seed_data.py
backend/alembic/versions/: 20260713_020408_add_roles_desc_perms_and_case_ai_json.py  20260714_120000_add_email_verification.py  20260714_130000_merge_email_and_announcements.py  424e8489d6c7_add_violation_rules_table.py  52bdc65fb503_add_paid_at_to_rewards.py  7d4c9f1a2b3e_merge_violation_rule_heads.py  8e5d0a2b4c6f_add_intake_description_and_vehicle_unbinding.py  a6c4e2f8b901_add_announcements.py  b4f2c8d6a109_add_reported_violation_type.py  c98f93f77440_add_violation_rules_table.py
backend/app/: main.py  worker.py
backend/app/ai/: providers.py  routes.py
backend/app/core/: config.py  database.py  deps.py  middleware.py  permissions.py  security.py
backend/app/models/: __init__.py  ai_detection_result.py  ai_review_result.py  announcement.py  audit_log.py  camera_api_key.py  camera_device.py  case.py  email_verification.py  intake.py  intake_event.py  media_asset.py  notification.py  notification_template.py  role.py  user.py  vehicle.py  violation.py  violation_rule.py  violation_rule_result.py
backend/app/schemas/: ai.py  (+11 more)
backend/schemas/: auth.py  common.py
backend/tests/: conftest.py  test_adapters_base.py  test_auth_api.py  test_cases_api.py  test_intakes_api.py  test_migrations.py  test_rbac_api.py  test_roi_evaluator.py  test_schemas_camera.py  test_schemas_report.py  test_schemas_statistics.py  test_security.py  test_seed_data.py  test_smoke.py  test_statistics_api.py  test_violations_api.py
(+243 files in other folders)
