[project]
name = "traffic-violation-backend"
version = "0.1.0"
description = "交通违章智能管理平台 · 第一阶段后端"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0,<0.116.0",
    "uvicorn[standard]>=0.32.0,<0.33.0",
    "sqlalchemy>=2.0.0,<2.1.0",
    "pymysql>=1.1.0,<1.2.0",
    "alembic>=1.14.0,<1.15.0",
    "pydantic>=2.10.0,<2.11.0",
    "pydantic-settings>=2.7.0,<2.8.0",
    "python-jose[cryptography]>=3.3.0,<3.4.0",
    "passlib[bcrypt]>=1.7.0,<1.8.0",
    "python-multipart>=0.0.9",
    "celery[redis]>=5.4.0,<5.5.0",
    "redis>=5.2.0,<5.3.0",
    "jinja2>=3.1.0,<3.2.0",
    "loguru>=0.7.0,<0.8.0",
    "ultralytics>=8.3.0",
    "paddleocr>=2.9.0",
    "paddlepaddle>=3.0.0",
    "openai>=1.58.0,<2.0.0",
    "httpx>=0.28.0,<0.29.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
