[project]
name = "traffic-violation-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "pydantic>=2.6",
    "pydantic-settings>=2.1",
    "python-jose[cryptography]>=3.3",
    "bcrypt>=4.1,<5",
    "pymysql>=1.1",
    "python-multipart>=0.0.9",
    "celery[redis]>=5.4,<5.5",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "httpx>=0.27"]

[tool.pytest.ini_options]
testpaths = ["tests"]
